--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="container">
     <h1>Employee Registration</h1>
-    <form id="registrationForm">
-      <div class="form-group">
+    <form id="registrationForm" action="submit_form.php" method="post">
+    <div class="form-group">
         <label for="fullName">Full Name</label>
         <input type="text" id="fullName" name="fullName" required>
       </div>
